<resources>
    <string name="app_name">Pertamina Health Assistant</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>

    <string name="loading">-</string>
    <string name="avg_today">Rata-rata hari ini</string>
    <string name="last">Terakhir</string>

    <!-- Label -->
    <string name="today">Hari ini</string>
    <string name="yesterday">Kemarin</string>
    <string name="average">Rata-rata</string>
    <string name="leaderboard">Langkah tertinggi</string>

    <!-- Step -->
    <string name="daily_step_title">Daily Step Count</string>
    <string name="step_unit">langkah</string>
    <string name="step_total">Total</string>
    <string name="distance">Jarak</string>
    <string name="speed">Kecepatan rata-rata</string>

    <!-- Calorie -->
    <string name="calorie">Kalori terbakar</string>
    <string name="calorie_unit">kalori</string>

    <!-- Heart rate -->
    <string name="heart_rate">Detak jantung</string>
    <string name="heart_rate_unit">bpm</string>

    <!-- Weight -->
    <string name="weight">Berat badan</string>
    <string name="weight_unit">kg</string>

    <!-- Sleep -->
    <string name="sleep">Waktu tidur</string>
    <string name="sleep_unit">jam</string>

    <!-- Permission -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Menu -->
    <string name="right_arrow">></string>
    <string name="sickness">Riwayat penyakit</string>
    <string name="options">Pengaturan</string>
    <string name="logout">Logout</string>

    <string name="connect_to_shealth">Connect to Samsung Health</string>

    <string name="notice">Notice</string>
    <string name="msg_perm_acquired">All permissions should be acquired</string>
    <string name="msg_conn_not_available">Connection with Samsung Health is not available</string>
    <string name="msg_req_install">Please install Samsung Health</string>
    <string name="msg_req_upgrade">Please upgrade Samsung Health</string>
    <string name="msg_req_enable">Please enable Samsung Health</string>
    <string name="msg_req_agree">Please agree with Samsung Health policy</string>
    <string name="msg_req_available">Please make Samsung Health available</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="login_button">Log in</string>
    <string name="register_button">Register</string>
</resources>
