<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context="com.imaduddinaf.pertaminahealthassistant.fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- User's profile -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/iv_user_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="32dp"
                android:background="@color/light_red"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_user_image"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="32dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:text="@string/loading"/>

                <TextView
                    android:id="@+id/tv_user_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="32dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:text="@string/loading"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"></LinearLayout>

        <!-- Step & calorie cards -->
        <LinearLayout
            android:id="@+id/container_step_calorie"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/container_last_step_calorie"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/tv_last_step_count"
                        android:text="@string/yesterday"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_last_step_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/loading"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_last_step_count"
                        android:text="@string/step_unit"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_last_calorie_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/loading"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_last_calorie_count"
                        android:text="@string/calorie_unit"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_current_step_calorie"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/tv_step_count"
                        android:text="@string/today"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_step_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/loading"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_step_count"
                        android:text="@string/step_unit"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_calorie_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/loading"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_calorie_count"
                        android:text="@string/calorie_unit"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"></LinearLayout>

        <!-- Heart rate cards -->
        <LinearLayout
            android:id="@+id/container_heart_rate"
            android:layout_width="match_parent"
            android:layout_height="147dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/grey"
                    android:textAlignment="center"
                    android:text="@string/heart_rate"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_above="@+id/tv_avg_heart_rate_count"
                            android:text="@string/avg_today"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_avg_heart_rate_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/loading"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="30sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_avg_heart_rate_count"
                            android:text="@string/heart_rate_unit"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_above="@+id/tv_heart_rate_count"
                            android:text="@string/last"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_heart_rate_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/loading"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="30sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_heart_rate_count"
                            android:text="@string/heart_rate_unit"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"></LinearLayout>

        <!-- Weight & sleep cards -->
        <LinearLayout
            android:id="@+id/container_weight_sleep"
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/container_weight"
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tv_weight_count"
                    android:text="@string/weight"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_weight_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/loading"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_weight_count"
                    android:text="@string/weight_unit"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_sleep"
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tv_sleep_count"
                    android:text="@string/sleep"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_sleep_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/loading"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sleep_count"
                    android:text="@string/sleep_unit"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"></LinearLayout>

        <!-- Other menus -->

    </LinearLayout>

</ScrollView>
